package Template_Method;

public class Lessons extends Aset {
    @Override
    public void showPageContent(){
        System.out.println("Учебные дисциплины");
    }
}
