package Template_Method;

public class Main extends Aset{
    @Override
    public void showPageContent(){
        System.out.println("Приветствуем на портале РТУ МИРЭА");
    }
}

